[gd_scene load_steps=5 format=2]

[ext_resource path="res://Snake.gd" type="Script" id=1]
[ext_resource path="res://Snake.png" type="Texture" id=2]
[ext_resource path="res://Body.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.01808

[node name="Snake" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Head" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Head"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Head"]
modulate = Color( 0.305882, 0.537255, 0.682353, 1 )
texture = ExtResource( 2 )
hframes = 5
frame = 1

[node name="Body" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 16 )

[node name="Body2" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 32 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Head/Area2D" to="." method="_on_Area2D_area_entered"]
